--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -53,10 +53,10 @@
                     <a href="http://www.t-nova.eu/">About</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="/demo.html">Services</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="/">Contact</a>
                 </li>
             </ul>
         </div>
