fix uri for vlc

--- a/flask/templates/demo.html
+++ b/flask/templates/demo.html
@@ -140,28 +140,28 @@
             <div class="col-lg-6 ">
                 <div class=" embed-responsive embed-responsive-16by9 ">
                     <embed class=" embed-responsive-item " type="application/x-vlc-plugin" name="video1" autoplay="yes" loop="yes"
-                           target="static/video/HARD_H264.mp4" ></embed>
+                           target="http://10.17.53.11/static/video/HARD_H264.mp4" ></embed>
                 </div>
                 <p class="label-black text-center" >Encoder in hardware H264 720p@2Mbps</p>
             </div>
             <div class="col-lg-6  ">
                 <div class=" embed-responsive embed-responsive-16by9 ">
                     <embed class=" embed-responsive-item " type="application/x-vlc-plugin" name="video1" autoplay="yes" loop="yes"
-                           target="static/video/HARD_H265.mp4"></embed>
+                           target="http://10.17.53.11/static/video/HARD_H265.mp4"></embed>
                 </div>
                 <p class="label-black text-center" >Encoder in hardware H265 720p@2Mbps</p>
             </div>
             <div class="col-lg-6  ">
                 <div class=" embed-responsive embed-responsive-16by9 ">
                     <embed class=" embed-responsive-item " type="application/x-vlc-plugin" name="video1" autoplay="yes" loop="yes"
-                           target="static/video/SOFT_H264.mp4"></embed>
+                           target="http://10.17.53.11/static/video/SOFT_H264.mp4"></embed>
                 </div>
                 <p class="label-black text-center" >Encoder in software H264 720p@2Mbps</p>
             </div>
             <div class="col-lg-6  ">
                 <div class=" embed-responsive embed-responsive-16by9 ">
                     <embed class=" embed-responsive-item " type="application/x-vlc-plugin" name="video1" autoplay="yes" loop="yes"
-                           target="static/video/SOFT_H264.mp4"></embed>
+                           target="http://10.17.53.11/static/video/SOFT_H264.mp4"></embed>
                 </div>
                 <p class="label-black text-center" >Encoder in software H265 720p@2Mbps</p>
             </div>
